--- a/classificator.ipynb
+++ b/classificator.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path to dataset files: /home/pasha/.cache/kagglehub/datasets/sumn2u/garbage-classification-v2/versions/8/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "Path to dataset files: /home/pasha/.cache/kagglehub/datasets/sumn2u/garbage-classification-v2/versions/8\n"
      ]
     }
    ],
@@ -25,14 +17,14 @@
     "import kagglehub\n",
     "\n",
     "# Download latest version\n",
-    "# path = kagglehub.dataset_download(\"sumn2u/garbage-classification-v2\")\n",
-    "path = \"/home/pasha/.cache/kagglehub/datasets/sumn2u/garbage-classification-v2/versions/8/\"\n",
+    "path = kagglehub.dataset_download(\"sumn2u/garbage-classification-v2\")\n",
+    "\n",
     "print(\"Path to dataset files:\", path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -53,33 +45,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Извлечение фичей"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_color_amounts(image):\n",
-    "    # Convert the image to HSV color space\n",
+    "def calculate_yellow_amount(image):\n",
+    "    \"\"\"Calculate the amount of yellow color in the image.\"\"\"\n",
     "    hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
-    "\n",
-    "    # Define the range for yellow color in HSV\n",
     "    lower_yellow = np.array([20, 100, 100])\n",
     "    upper_yellow = np.array([30, 255, 255])\n",
     "    yellow_mask = cv2.inRange(hsv_image, lower_yellow, upper_yellow)\n",
     "    yellow_amount = cv2.countNonZero(yellow_mask)\n",
+    "    return yellow_amount\n",
     "\n",
-    "    # Define the range for silver color in HSV\n",
+    "def calculate_silver_amount(image):\n",
+    "    \"\"\"Calculate the amount of silver color in the image.\"\"\"\n",
+    "    hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
     "    lower_silver = np.array([0, 0, 200])\n",
     "    upper_silver = np.array([180, 25, 255])\n",
     "    silver_mask = cv2.inRange(hsv_image, lower_silver, upper_silver)\n",
     "    silver_amount = cv2.countNonZero(silver_mask)\n",
+    "    return silver_amount\n",
     "\n",
+    "def get_features(image):\n",
+    "    \"\"\"Get a pair of features (yellow amount, silver amount) from the image.\"\"\"\n",
+    "    yellow_amount = calculate_yellow_amount(image)\n",
+    "    silver_amount = calculate_silver_amount(image)\n",
     "    return yellow_amount, silver_amount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +96,20 @@
     }
    ],
    "source": [
-    "test_im = image = cv2.imread(\"/home/pasha/.cache/kagglehub/datasets/sumn2u/garbage-classification-v2/versions/8/garbage-dataset/metal/metal_181.jpg\")\n",
-    "print(calculate_color_amounts(test_im))"
+    "test_im = image = cv2.imread(path + \"/garbage-dataset/metal/metal_181.jpg\")\n",
+    "print(get_features(test_im))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Обучение классификатора"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -121,8 +133,7 @@
       "    accuracy                           0.22      3953\n",
       "   macro avg       0.18      0.17      0.17      3953\n",
       "weighted avg       0.22      0.22      0.22      3953\n",
-      "\n",
-      "Predicted class: None\n"
+      "\n"
      ]
     }
    ],
@@ -136,7 +147,7 @@
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
     "# Define the path to the dataset\n",
-    "base_path = \"/home/pasha/.cache/kagglehub/datasets/sumn2u/garbage-classification-v2/versions/8/garbage-dataset\"\n",
+    "base_path = path + \"/garbage-dataset\"\n",
     "classes = ['trash', 'glass', 'battery', 'clothes', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
     "\n",
     "# Initialize lists to hold features and labels\n",
@@ -154,7 +165,9 @@
     "        image = cv2.imread(image_path)\n",
     "        \n",
     "        if image is not None:\n",
-    "            yellow_amount, silver_amount = calculate_color_amounts(image)\n",
+    "            # Use the new functions to calculate yellow and silver amounts\n",
+    "            yellow_amount = calculate_yellow_amount(image)\n",
+    "            silver_amount = calculate_silver_amount(image)\n",
     "            features.append([yellow_amount, silver_amount])\n",
     "            labels.append(class_name)\n",
     "\n",
@@ -182,21 +195,19 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        yellow_amount, silver_amount = calculate_color_amounts(image)\n",
+    "        # Use the new functions to calculate yellow and silver amounts\n",
+    "        yellow_amount = calculate_yellow_amount(image)\n",
+    "        silver_amount = calculate_silver_amount(image)\n",
     "        feature = np.array([[yellow_amount, silver_amount]])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
-    "        return None\n",
-    "\n",
-    "\n",
-    "result = classify_image('/home/pasha/.cache/kagglehub/datasets/sumn2u/garbage-classification-v2/versions/8/garbage-dataset/metal')\n",
-    "print(\"Predicted class:\", result)"
+    "        return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +227,7 @@
     }
    ],
    "source": [
-    "result = classify_image('/home/pasha/.cache/kagglehub/datasets/sumn2u/garbage-classification-v2/versions/8/garbage-dataset/metal/metal_876.jpg')\n",
+    "result = classify_image(path + '/garbage-dataset/metal/metal_286.jpg')  # Adjust the path to a specific image\n",
     "print(\"Predicted class:\", result)"
    ]
   }
