--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,28 +83,41 @@
     "    silver_amount = cv2.countNonZero(silver_mask)\n",
     "    return silver_amount\n",
     "\n",
+    "def calculate_parallel_lines(image):\n",
+    "    \"\"\"Calculate the amount of parallel lines in the image.\"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    edges = cv2.Canny(gray_image, 50, 150, apertureSize=3)\n",
+    "    \n",
+    "    # Detect lines using Hough Transform\n",
+    "    lines = cv2.HoughLines(edges, 1, np.pi / 180, threshold=100)\n",
+    "    \n",
+    "    if lines is not None:\n",
+    "        return len(lines)  # Return the number of detected lines\n",
+    "    return 0  # No lines detected\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a pair of features (yellow amount, silver amount) from the image.\"\"\"\n",
+    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines) from the image.\"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
-    "    return yellow_amount, silver_amount"
+    "    parallel_lines = calculate_parallel_lines(image)\n",
+    "    return yellow_amount, silver_amount, parallel_lines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 34841)\n"
+      "(15834, 284114, 140)\n"
      ]
     }
    ],
    "source": [
-    "test_im = image = cv2.imread(path + \"/garbage-dataset/metal/metal_181.jpg\")\n",
+    "test_im = image = cv2.imread(path + \"/garbage-dataset/cardboard/cardboard_25.jpg\")\n",
     "print(get_features(test_im))"
    ]
   },
@@ -109,31 +130,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.22261573488489755\n",
+      "Accuracy: 0.3458133063496079\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.07      0.06      0.06       192\n",
-      "  biological       0.23      0.25      0.24       190\n",
-      "   cardboard       0.32      0.29      0.30       386\n",
-      "     clothes       0.34      0.38      0.36      1086\n",
-      "       glass       0.17      0.17      0.17       617\n",
-      "       metal       0.09      0.08      0.08       191\n",
-      "       paper       0.18      0.15      0.16       343\n",
-      "     plastic       0.15      0.14      0.14       392\n",
-      "       shoes       0.15      0.15      0.15       392\n",
-      "       trash       0.06      0.07      0.07       164\n",
+      "     battery       0.27      0.22      0.24       192\n",
+      "  biological       0.26      0.33      0.29       190\n",
+      "   cardboard       0.38      0.39      0.39       386\n",
+      "     clothes       0.51      0.67      0.58      1086\n",
+      "       glass       0.24      0.22      0.23       617\n",
+      "       metal       0.08      0.07      0.08       191\n",
+      "       paper       0.28      0.21      0.24       343\n",
+      "     plastic       0.22      0.16      0.19       392\n",
+      "       shoes       0.20      0.16      0.18       392\n",
+      "       trash       0.23      0.21      0.22       164\n",
       "\n",
-      "    accuracy                           0.22      3953\n",
-      "   macro avg       0.18      0.17      0.17      3953\n",
-      "weighted avg       0.22      0.22      0.22      3953\n",
-      "\n"
+      "    accuracy                           0.35      3953\n",
+      "   macro avg       0.27      0.26      0.26      3953\n",
+      "weighted avg       0.32      0.35      0.33      3953\n",
+      "\n",
+      "Predicted class: metal\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -165,18 +195,17 @@
     "        image = cv2.imread(image_path)\n",
     "        \n",
     "        if image is not None:\n",
-    "            # Use the new functions to calculate yellow and silver amounts\n",
-    "            yellow_amount = calculate_yellow_amount(image)\n",
-    "            silver_amount = calculate_silver_amount(image)\n",
-    "            features.append([yellow_amount, silver_amount])\n",
+    "            # Use the new functions to calculate yellow and silver amounts and parallel lines\n",
+    "            yellow_amount, silver_amount, parallel_lines = get_features(image)\n",
+    "            features.append([yellow_amount, silver_amount, parallel_lines])\n",
     "            labels.append(class_name)\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
-    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount'])\n",
+    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines'])\n",
     "df['label'] = labels\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X = df[['yellow_amount', 'silver_amount']]\n",
+    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -195,26 +224,28 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        # Use the new functions to calculate yellow and silver amounts\n",
-    "        yellow_amount = calculate_yellow_amount(image)\n",
-    "        silver_amount = calculate_silver_amount(image)\n",
-    "        feature = np.array([[yellow_amount, silver_amount]])\n",
+    "        # Use the new functions to calculate yellow and silver amounts and parallel lines\n",
+    "        yellow_amount, silver_amount, parallel_lines = get_features(image)\n",
+    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines]])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
-    "        return None\n"
+    "        return None\n",
+    "\n",
+    "result = classify_image(path + '/garbage-dataset/metal/metal_286.jpg')  # Adjust the path to a specific image\n",
+    "print(\"Predicted class:\", result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: metal\n"
+      "Predicted class: cardboard\n"
      ]
     },
     {
@@ -227,7 +258,7 @@
     }
    ],
    "source": [
-    "result = classify_image(path + '/garbage-dataset/metal/metal_286.jpg')  # Adjust the path to a specific image\n",
+    "result = classify_image(path + '/garbage-dataset/cardboard/cardboard_169.jpg')  # Adjust the path to a specific image\n",
     "print(\"Predicted class:\", result)"
    ]
   },
