--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +40,10 @@
     "import cv2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
     "classes = os.listdir(os.path.join(path, \"garbage-dataset\"))\n",
     "print(classes)"
    ]
@@ -61,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,29 +91,43 @@
     "        return len(lines)  # Return the number of detected lines\n",
     "    return 0  # No lines detected\n",
     "\n",
+    "def detect_cylinders(image):\n",
+    "    \"\"\"Detect cylindrical shapes in the image.\"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    blurred_image = cv2.GaussianBlur(gray_image, (9, 9), 2)\n",
+    "\n",
+    "    # Detect circles using Hough Transform\n",
+    "    circles = cv2.HoughCircles(blurred_image, cv2.HOUGH_GRADIENT, dp=1, minDist=30,\n",
+    "                               param1=100, param2=30, minRadius=10, maxRadius=100)\n",
+    "\n",
+    "    if circles is not None:\n",
+    "        return circles.shape[1]  # Return the number of detected circles\n",
+    "    return 0  # No circles detected\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines) from the image.\"\"\"\n",
+    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes) from the image.\"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
     "    parallel_lines = calculate_parallel_lines(image)\n",
-    "    return yellow_amount, silver_amount, parallel_lines"
+    "    cylinder_count = detect_cylinders(image)  # New feature for cylindrical shapes\n",
+    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140)\n"
+      "(15834, 284114, 140, 15)\n"
      ]
     }
    ],
    "source": [
-    "test_im = image = cv2.imread(path + \"/garbage-dataset/cardboard/cardboard_25.jpg\")\n",
+    "test_im = cv2.imread(path + \"/garbage-dataset/cardboard/cardboard_25.jpg\")\n",
     "print(get_features(test_im))"
    ]
   },
@@ -130,52 +140,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.3458133063496079\n",
+      "Accuracy: 0.3898305084745763\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.27      0.22      0.24       192\n",
-      "  biological       0.26      0.33      0.29       190\n",
-      "   cardboard       0.38      0.39      0.39       386\n",
-      "     clothes       0.51      0.67      0.58      1086\n",
-      "       glass       0.24      0.22      0.23       617\n",
-      "       metal       0.08      0.07      0.08       191\n",
-      "       paper       0.28      0.21      0.24       343\n",
-      "     plastic       0.22      0.16      0.19       392\n",
-      "       shoes       0.20      0.16      0.18       392\n",
-      "       trash       0.23      0.21      0.22       164\n",
+      "     battery       0.31      0.29      0.30       192\n",
+      "  biological       0.36      0.39      0.38       190\n",
+      "   cardboard       0.43      0.44      0.44       386\n",
+      "     clothes       0.54      0.69      0.60      1086\n",
+      "       glass       0.29      0.29      0.29       617\n",
+      "       metal       0.18      0.14      0.16       191\n",
+      "       paper       0.33      0.25      0.28       343\n",
+      "     plastic       0.24      0.18      0.20       392\n",
+      "       shoes       0.27      0.22      0.24       392\n",
+      "       trash       0.27      0.27      0.27       164\n",
       "\n",
-      "    accuracy                           0.35      3953\n",
-      "   macro avg       0.27      0.26      0.26      3953\n",
-      "weighted avg       0.32      0.35      0.33      3953\n",
-      "\n",
-      "Predicted class: metal\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
+      "    accuracy                           0.39      3953\n",
+      "   macro avg       0.32      0.32      0.32      3953\n",
+      "weighted avg       0.37      0.39      0.37      3953\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
-    "\n",
     "# Define the path to the dataset\n",
     "base_path = path + \"/garbage-dataset\"\n",
     "classes = ['trash', 'glass', 'battery', 'clothes', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
@@ -195,17 +188,17 @@
     "        image = cv2.imread(image_path)\n",
     "        \n",
     "        if image is not None:\n",
-    "            # Use the new functions to calculate yellow and silver amounts and parallel lines\n",
-    "            yellow_amount, silver_amount, parallel_lines = get_features(image)\n",
-    "            features.append([yellow_amount, silver_amount, parallel_lines])\n",
+    "            # Use the new functions to calculate yellow and silver amounts, parallel lines, and cylinder count\n",
+    "            yellow_amount, silver_amount, parallel_lines, cylinder_count = get_features(image)\n",
+    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count])\n",
     "            labels.append(class_name)\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
-    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines'])\n",
+    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count'])\n",
     "df['label'] = labels\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines']]\n",
+    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -224,28 +217,25 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        # Use the new functions to calculate yellow and silver amounts and parallel lines\n",
-    "        yellow_amount, silver_amount, parallel_lines = get_features(image)\n",
-    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines]])\n",
+    "        # Use the new functions to calculate yellow and silver amounts, parallel lines, and cylinder count\n",
+    "        yellow_amount, silver_amount, parallel_lines, cylinder_count = get_features(image)\n",
+    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count]])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
-    "        return None\n",
-    "\n",
-    "result = classify_image(path + '/garbage-dataset/metal/metal_286.jpg')  # Adjust the path to a specific image\n",
-    "print(\"Predicted class:\", result)"
+    "        return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: cardboard\n"
+      "Predicted class: glass\n"
      ]
     },
     {
@@ -258,7 +248,7 @@
     }
    ],
    "source": [
-    "result = classify_image(path + '/garbage-dataset/cardboard/cardboard_169.jpg')  # Adjust the path to a specific image\n",
+    "result = classify_image(path + '/garbage-dataset/glass/glass_686.jpg')  # Adjust the path to a specific image\n",
     "print(\"Predicted class:\", result)"
    ]
   },
