feat: dataset into training and testing one

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -40,9 +40,15 @@
     "import cv2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "# Suppress warnings for better output\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "\n",
     "classes = os.listdir(os.path.join(path, \"garbage-dataset\"))\n",
     "print(classes)"
@@ -57,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -127,6 +133,7 @@
     }
    ],
    "source": [
+    "# Feature extraction testing\n",
     "test_im = cv2.imread(path + \"/garbage-dataset/cardboard/cardboard_25.jpg\")\n",
     "print(get_features(test_im))"
    ]
@@ -140,34 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.3898305084745763\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "     battery       0.31      0.29      0.30       192\n",
-      "  biological       0.36      0.39      0.38       190\n",
-      "   cardboard       0.43      0.44      0.44       386\n",
-      "     clothes       0.54      0.69      0.60      1086\n",
-      "       glass       0.29      0.29      0.29       617\n",
-      "       metal       0.18      0.14      0.16       191\n",
-      "       paper       0.33      0.25      0.28       343\n",
-      "     plastic       0.24      0.18      0.20       392\n",
-      "       shoes       0.27      0.22      0.24       392\n",
-      "       trash       0.27      0.27      0.27       164\n",
-      "\n",
-      "    accuracy                           0.39      3953\n",
-      "   macro avg       0.32      0.32      0.32      3953\n",
-      "weighted avg       0.37      0.39      0.37      3953\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the path to the dataset\n",
     "base_path = path + \"/garbage-dataset\"\n",
@@ -176,22 +158,29 @@
     "# Initialize lists to hold features and labels\n",
     "features = []\n",
     "labels = []\n",
+    "test_images = []  # List to hold paths of test images\n",
     "\n",
     "# Loop through each class and extract features from images\n",
     "for class_name in classes:\n",
     "    class_path = os.path.join(base_path, class_name)\n",
-    "    \n",
-    "    for image_name in os.listdir(class_path):\n",
+    "    image_names = os.listdir(class_path)\n",
+    "\n",
+    "    # Split the images into training and testing sets (80% train, 20% test)\n",
+    "    train_images, test_images_class = train_test_split(image_names, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    # Process training images\n",
+    "    for image_name in train_images:\n",
     "        image_path = os.path.join(class_path, image_name)\n",
-    "        \n",
-    "        # Read the image\n",
     "        image = cv2.imread(image_path)\n",
-    "        \n",
+    "\n",
     "        if image is not None:\n",
-    "            # Use the new functions to calculate yellow and silver amounts, parallel lines, and cylinder count\n",
     "            yellow_amount, silver_amount, parallel_lines, cylinder_count = get_features(image)\n",
     "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count])\n",
     "            labels.append(class_name)\n",
+    "\n",
+    "    # Collect test images for manual testing\n",
+    "    for image_name in test_images_class:\n",
+    "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
     "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count'])\n",
@@ -217,18 +206,17 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        # Use the new functions to calculate yellow and silver amounts, parallel lines, and cylinder count\n",
     "        yellow_amount, silver_amount, parallel_lines, cylinder_count = get_features(image)\n",
     "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count]])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
-    "        return None\n"
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -237,19 +225,153 @@
      "text": [
       "Predicted class: glass\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Classifier testing (runs classifier for a specific image)\n",
+    "\n",
+    "result = classify_image(path + '/garbage-dataset/metal/metal_2370.jpg') \n",
+    "print(\"Predicted class:\", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pasha/image_classification/.venv/lib/python3.12/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
+      "Predicted class counts for test images containing trash:\n",
+      "Class: biological, Count: 6\n",
+      "Class: glass, Count: 36\n",
+      "Class: trash, Count: 51\n",
+      "Class: metal, Count: 4\n",
+      "Class: plastic, Count: 22\n",
+      "Class: battery, Count: 13\n",
+      "Class: shoes, Count: 23\n",
+      "Class: cardboard, Count: 9\n",
+      "Class: clothes, Count: 21\n",
+      "Class: paper, Count: 5\n",
+      "Predicted class counts for test images containing glass:\n",
+      "Class: trash, Count: 37\n",
+      "Class: shoes, Count: 84\n",
+      "Class: glass, Count: 166\n",
+      "Class: clothes, Count: 131\n",
+      "Class: plastic, Count: 49\n",
+      "Class: battery, Count: 25\n",
+      "Class: paper, Count: 24\n",
+      "Class: biological, Count: 35\n",
+      "Class: cardboard, Count: 46\n",
+      "Class: metal, Count: 16\n",
+      "Predicted class counts for test images containing battery:\n",
+      "Class: glass, Count: 31\n",
+      "Class: paper, Count: 13\n",
+      "Class: biological, Count: 5\n",
+      "Class: clothes, Count: 40\n",
+      "Class: battery, Count: 48\n",
+      "Class: plastic, Count: 7\n",
+      "Class: shoes, Count: 23\n",
+      "Class: trash, Count: 5\n",
+      "Class: metal, Count: 6\n",
+      "Class: cardboard, Count: 11\n",
+      "Predicted class counts for test images containing clothes:\n",
+      "Class: clothes, Count: 708\n",
+      "Class: plastic, Count: 53\n",
+      "Class: glass, Count: 77\n",
+      "Class: shoes, Count: 41\n",
+      "Class: cardboard, Count: 36\n",
+      "Class: paper, Count: 69\n",
+      "Class: metal, Count: 19\n",
+      "Class: battery, Count: 27\n",
+      "Class: biological, Count: 28\n",
+      "Class: trash, Count: 8\n",
+      "Predicted class counts for test images containing metal:\n",
+      "Class: paper, Count: 13\n",
+      "Class: glass, Count: 25\n",
+      "Class: battery, Count: 8\n",
+      "Class: clothes, Count: 47\n",
+      "Class: shoes, Count: 24\n",
+      "Class: metal, Count: 23\n",
+      "Class: biological, Count: 19\n",
+      "Class: cardboard, Count: 12\n",
+      "Class: plastic, Count: 24\n",
+      "Class: trash, Count: 9\n",
+      "Predicted class counts for test images containing plastic:\n",
+      "Class: clothes, Count: 124\n",
+      "Class: battery, Count: 16\n",
+      "Class: trash, Count: 21\n",
+      "Class: plastic, Count: 73\n",
+      "Class: paper, Count: 25\n",
+      "Class: shoes, Count: 22\n",
+      "Class: biological, Count: 15\n",
+      "Class: cardboard, Count: 32\n",
+      "Class: metal, Count: 13\n",
+      "Class: glass, Count: 56\n",
+      "Predicted class counts for test images containing cardboard:\n",
+      "Class: cardboard, Count: 152\n",
+      "Class: glass, Count: 54\n",
+      "Class: clothes, Count: 69\n",
+      "Class: trash, Count: 8\n",
+      "Class: metal, Count: 8\n",
+      "Class: plastic, Count: 19\n",
+      "Class: battery, Count: 10\n",
+      "Class: shoes, Count: 18\n",
+      "Class: biological, Count: 10\n",
+      "Class: paper, Count: 17\n",
+      "Predicted class counts for test images containing paper:\n",
+      "Class: biological, Count: 6\n",
+      "Class: clothes, Count: 113\n",
+      "Class: plastic, Count: 21\n",
+      "Class: shoes, Count: 15\n",
+      "Class: cardboard, Count: 22\n",
+      "Class: glass, Count: 40\n",
+      "Class: battery, Count: 9\n",
+      "Class: metal, Count: 16\n",
+      "Class: paper, Count: 90\n",
+      "Class: trash, Count: 4\n",
+      "Predicted class counts for test images containing biological:\n",
+      "Class: cardboard, Count: 14\n",
+      "Class: battery, Count: 3\n",
+      "Class: biological, Count: 91\n",
+      "Class: glass, Count: 22\n",
+      "Class: shoes, Count: 22\n",
+      "Class: clothes, Count: 33\n",
+      "Class: plastic, Count: 7\n",
+      "Class: metal, Count: 4\n",
+      "Class: paper, Count: 1\n",
+      "Class: trash, Count: 3\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: shoes, Count: 98\n",
+      "Class: paper, Count: 14\n",
+      "Class: metal, Count: 23\n",
+      "Class: clothes, Count: 81\n",
+      "Class: plastic, Count: 25\n",
+      "Class: glass, Count: 61\n",
+      "Class: biological, Count: 28\n",
+      "Class: battery, Count: 23\n",
+      "Class: trash, Count: 20\n",
+      "Class: cardboard, Count: 23\n"
      ]
     }
    ],
    "source": [
-    "result = classify_image(path + '/garbage-dataset/glass/glass_686.jpg')  # Adjust the path to a specific image\n",
-    "print(\"Predicted class:\", result)"
+    "# Classifier testing (runs classifier for the remaining images)\n",
+    "\n",
+    "def test_classify(test_images, target_class_name):\n",
+    "    predictions = defaultdict(int)\n",
+    "    for test_image in test_images:\n",
+    "        if target_class_name in test_image:  \n",
+    "            predicted_class = classify_image(test_image)  \n",
+    "            predictions[predicted_class] += 1 \n",
+    "    return dict(predictions)  \n",
+    "\n",
+    "for class_name in classes:\n",
+    "    results = test_classify(test_images, class_name)\n",
+    "    print(\"Predicted class counts for test images containing \" + class_name + ':')\n",
+    "    for class_name, count in results.items():\n",
+    "        print(f\"Class: {class_name}, Count: {count}\")"
    ]
   },
   {
