feat: add smoothness feature

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,7 @@
     "import pandas as pd\n",
     "import warnings\n",
     "\n",
+    "from skimage.feature import graycomatrix, graycoprops\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,27 +132,35 @@
     "    transparency_amount = cv2.countNonZero(transparent_mask)\n",
     "    return transparency_amount\n",
     "\n",
+    "def calculate_texture_smoothness(image):\n",
+    "    \"\"\"Calculate the smoothness of the texture in the image.\"\"\"\n",
+    "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    glcm = graycomatrix(gray_image, [1], [0], 256, symmetric=True, normed=True)\n",
+    "    contrast = graycoprops(glcm, 'contrast')[0, 0]\n",
+    "    return contrast\n",
+    "\n",
     "def get_features(image):\n",
-    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency) from the image.\"\"\"\n",
+    "    \"\"\"Get a set of features (yellow amount, silver amount, parallel lines, cylindrical shapes, reflections, transparency, texture smoothness) from the image.\"\"\"\n",
     "    yellow_amount = calculate_yellow_amount(image)\n",
     "    silver_amount = calculate_silver_amount(image)\n",
     "    parallel_lines = calculate_parallel_lines(image)\n",
     "    cylinder_count = detect_cylinders(image)\n",
     "    reflection_amount = calculate_reflection(image)\n",
-    "    transparency_amount = calculate_transparency(image)  # Новый признак\n",
-    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount"
+    "    transparency_amount = calculate_transparency(image)\n",
+    "    texture_smoothness = calculate_texture_smoothness(image)\n",
+    "    return yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15834, 284114, 140, 15, 303454, 0)\n"
+      "(15834, 284114, 140, 15, 303454, 0, np.float64(150.46217028380636))\n"
      ]
     }
    ],
@@ -170,39 +179,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.4898798228969007\n",
+      "Accuracy: 0.5553447185325743\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     battery       0.52      0.51      0.52       145\n",
-      "  biological       0.47      0.55      0.50       138\n",
-      "   cardboard       0.51      0.48      0.49       311\n",
-      "     clothes       0.58      0.80      0.67       886\n",
-      "       glass       0.39      0.44      0.41       455\n",
-      "       metal       0.32      0.14      0.20       163\n",
-      "       paper       0.51      0.28      0.36       263\n",
-      "     plastic       0.36      0.25      0.29       327\n",
-      "       shoes       0.41      0.36      0.38       317\n",
-      "       trash       0.46      0.33      0.39       157\n",
+      "     battery       0.62      0.54      0.58       145\n",
+      "  biological       0.51      0.64      0.57       138\n",
+      "   cardboard       0.67      0.54      0.60       311\n",
+      "     clothes       0.63      0.90      0.74       886\n",
+      "       glass       0.44      0.49      0.46       455\n",
+      "       metal       0.35      0.13      0.19       163\n",
+      "       paper       0.51      0.34      0.41       263\n",
+      "     plastic       0.48      0.31      0.37       327\n",
+      "       shoes       0.47      0.41      0.44       317\n",
+      "       trash       0.48      0.38      0.42       157\n",
       "\n",
-      "    accuracy                           0.49      3162\n",
-      "   macro avg       0.45      0.41      0.42      3162\n",
-      "weighted avg       0.47      0.49      0.47      3162\n",
+      "    accuracy                           0.56      3162\n",
+      "   macro avg       0.52      0.47      0.48      3162\n",
+      "weighted avg       0.54      0.56      0.53      3162\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Define the path to the dataset\n",
-    "base_path = path + \"/garbage-dataset\"\n",
-    "classes = ['trash', 'glass', 'battery', 'clothes', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
-    "\n",
     "# Initialize lists to hold features and labels\n",
     "features = []\n",
     "labels = []\n",
@@ -222,8 +227,8 @@
     "        image = cv2.imread(image_path)\n",
     "\n",
     "        if image is not None:\n",
-    "            yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount = get_features(image)\n",
-    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount])\n",
+    "            yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness = get_features(image)\n",
+    "            features.append([yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness])\n",
     "            labels.append(class_name)\n",
     "\n",
     "    # Collect test images for manual testing\n",
@@ -231,11 +236,11 @@
     "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
     "# Convert features and labels to a DataFrame\n",
-    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount'])\n",
+    "df = pd.DataFrame(features, columns=['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness'])\n",
     "df['label'] = labels\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount']]\n",
+    "X = df[['yellow_amount', 'silver_amount', 'parallel_lines', 'cylinder_count', 'reflection_amount', 'transparency_amount', 'texture_smoothness']]\n",
     "y = df['label']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -254,8 +259,8 @@
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
-    "        yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount = get_features(image)\n",
-    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount]])\n",
+    "        yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness = get_features(image)\n",
+    "        feature = np.array([[yellow_amount, silver_amount, parallel_lines, cylinder_count, reflection_amount, transparency_amount, texture_smoothness]])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -291,114 +296,113 @@
      "output_type": "stream",
      "text": [
       "Predicted class counts for test images containing trash:\n",
-      "Class: metal, Count: 7\n",
-      "Class: trash, Count: 73\n",
-      "Class: battery, Count: 5\n",
-      "Class: plastic, Count: 16\n",
-      "Class: shoes, Count: 11\n",
-      "Class: glass, Count: 44\n",
-      "Class: cardboard, Count: 13\n",
-      "Class: clothes, Count: 15\n",
-      "Class: paper, Count: 3\n",
-      "Class: biological, Count: 3\n",
-      "Predicted class counts for test images containing glass:\n",
-      "Class: glass, Count: 261\n",
-      "Class: trash, Count: 31\n",
-      "Class: metal, Count: 14\n",
-      "Class: biological, Count: 22\n",
-      "Class: cardboard, Count: 27\n",
-      "Class: plastic, Count: 39\n",
-      "Class: shoes, Count: 63\n",
-      "Class: clothes, Count: 112\n",
-      "Class: paper, Count: 19\n",
-      "Class: battery, Count: 25\n",
-      "Predicted class counts for test images containing battery:\n",
-      "Class: shoes, Count: 26\n",
-      "Class: paper, Count: 3\n",
-      "Class: biological, Count: 8\n",
-      "Class: clothes, Count: 22\n",
-      "Class: glass, Count: 28\n",
-      "Class: battery, Count: 94\n",
-      "Class: plastic, Count: 2\n",
-      "Class: metal, Count: 1\n",
-      "Class: cardboard, Count: 4\n",
-      "Class: trash, Count: 1\n",
-      "Predicted class counts for test images containing clothes:\n",
-      "Class: clothes, Count: 841\n",
-      "Class: glass, Count: 54\n",
-      "Class: paper, Count: 39\n",
-      "Class: battery, Count: 14\n",
-      "Class: shoes, Count: 21\n",
-      "Class: biological, Count: 33\n",
-      "Class: trash, Count: 3\n",
-      "Class: metal, Count: 12\n",
-      "Class: plastic, Count: 23\n",
-      "Class: cardboard, Count: 26\n",
-      "Predicted class counts for test images containing metal:\n",
-      "Class: paper, Count: 10\n",
-      "Class: shoes, Count: 20\n",
-      "Class: clothes, Count: 48\n",
-      "Class: glass, Count: 46\n",
-      "Class: metal, Count: 37\n",
-      "Class: biological, Count: 14\n",
-      "Class: cardboard, Count: 9\n",
-      "Class: plastic, Count: 13\n",
-      "Class: trash, Count: 5\n",
-      "Class: battery, Count: 2\n",
-      "Predicted class counts for test images containing plastic:\n",
-      "Class: clothes, Count: 121\n",
-      "Class: paper, Count: 19\n",
-      "Class: plastic, Count: 106\n",
-      "Class: glass, Count: 61\n",
-      "Class: trash, Count: 17\n",
-      "Class: cardboard, Count: 35\n",
-      "Class: biological, Count: 17\n",
-      "Class: shoes, Count: 15\n",
-      "Class: metal, Count: 4\n",
-      "Class: battery, Count: 2\n",
-      "Predicted class counts for test images containing cardboard:\n",
-      "Class: cardboard, Count: 193\n",
-      "Class: glass, Count: 32\n",
-      "Class: trash, Count: 9\n",
-      "Class: metal, Count: 6\n",
-      "Class: clothes, Count: 63\n",
-      "Class: biological, Count: 13\n",
-      "Class: shoes, Count: 15\n",
+      "Class: metal, Count: 3\n",
+      "Class: trash, Count: 72\n",
+      "Class: plastic, Count: 11\n",
       "Class: battery, Count: 4\n",
-      "Class: plastic, Count: 15\n",
-      "Class: paper, Count: 15\n",
-      "Predicted class counts for test images containing paper:\n",
-      "Class: paper, Count: 113\n",
-      "Class: clothes, Count: 108\n",
-      "Class: glass, Count: 30\n",
-      "Class: metal, Count: 10\n",
-      "Class: cardboard, Count: 23\n",
-      "Class: plastic, Count: 21\n",
-      "Class: battery, Count: 7\n",
-      "Class: trash, Count: 13\n",
-      "Class: shoes, Count: 6\n",
+      "Class: shoes, Count: 13\n",
+      "Class: glass, Count: 46\n",
+      "Class: paper, Count: 5\n",
+      "Class: cardboard, Count: 13\n",
+      "Class: clothes, Count: 18\n",
       "Class: biological, Count: 5\n",
-      "Predicted class counts for test images containing biological:\n",
-      "Class: plastic, Count: 4\n",
-      "Class: cardboard, Count: 5\n",
-      "Class: clothes, Count: 30\n",
-      "Class: biological, Count: 114\n",
-      "Class: glass, Count: 17\n",
-      "Class: shoes, Count: 23\n",
-      "Class: trash, Count: 3\n",
-      "Class: battery, Count: 1\n",
+      "Predicted class counts for test images containing glass:\n",
+      "Class: glass, Count: 301\n",
+      "Class: shoes, Count: 68\n",
+      "Class: trash, Count: 21\n",
+      "Class: clothes, Count: 97\n",
+      "Class: plastic, Count: 36\n",
+      "Class: metal, Count: 16\n",
+      "Class: cardboard, Count: 15\n",
+      "Class: biological, Count: 23\n",
+      "Class: paper, Count: 15\n",
+      "Class: battery, Count: 21\n",
+      "Predicted class counts for test images containing battery:\n",
+      "Class: shoes, Count: 31\n",
+      "Class: glass, Count: 33\n",
+      "Class: battery, Count: 104\n",
+      "Class: biological, Count: 7\n",
+      "Class: trash, Count: 1\n",
+      "Class: cardboard, Count: 3\n",
+      "Class: clothes, Count: 7\n",
       "Class: paper, Count: 2\n",
       "Class: metal, Count: 1\n",
-      "Predicted class counts for test images containing shoes:\n",
-      "Class: glass, Count: 57\n",
-      "Class: shoes, Count: 151\n",
-      "Class: metal, Count: 15\n",
-      "Class: clothes, Count: 94\n",
-      "Class: plastic, Count: 8\n",
-      "Class: biological, Count: 28\n",
-      "Class: trash, Count: 8\n",
+      "Predicted class counts for test images containing clothes:\n",
+      "Class: clothes, Count: 959\n",
+      "Class: paper, Count: 15\n",
+      "Class: battery, Count: 4\n",
+      "Class: metal, Count: 8\n",
+      "Class: plastic, Count: 13\n",
+      "Class: shoes, Count: 3\n",
+      "Class: biological, Count: 14\n",
+      "Class: glass, Count: 34\n",
+      "Class: trash, Count: 2\n",
       "Class: cardboard, Count: 14\n",
-      "Class: battery, Count: 18\n",
+      "Predicted class counts for test images containing metal:\n",
+      "Class: clothes, Count: 52\n",
+      "Class: glass, Count: 38\n",
+      "Class: metal, Count: 42\n",
+      "Class: shoes, Count: 26\n",
+      "Class: biological, Count: 14\n",
+      "Class: plastic, Count: 13\n",
+      "Class: cardboard, Count: 7\n",
+      "Class: paper, Count: 4\n",
+      "Class: trash, Count: 4\n",
+      "Class: battery, Count: 4\n",
+      "Predicted class counts for test images containing plastic:\n",
+      "Class: plastic, Count: 122\n",
+      "Class: cardboard, Count: 29\n",
+      "Class: clothes, Count: 125\n",
+      "Class: paper, Count: 22\n",
+      "Class: trash, Count: 16\n",
+      "Class: battery, Count: 3\n",
+      "Class: glass, Count: 55\n",
+      "Class: shoes, Count: 12\n",
+      "Class: metal, Count: 6\n",
+      "Class: biological, Count: 7\n",
+      "Predicted class counts for test images containing cardboard:\n",
+      "Class: cardboard, Count: 198\n",
+      "Class: clothes, Count: 64\n",
+      "Class: glass, Count: 34\n",
+      "Class: trash, Count: 4\n",
+      "Class: plastic, Count: 13\n",
+      "Class: biological, Count: 16\n",
+      "Class: battery, Count: 8\n",
+      "Class: shoes, Count: 10\n",
+      "Class: metal, Count: 3\n",
+      "Class: paper, Count: 15\n",
+      "Predicted class counts for test images containing paper:\n",
+      "Class: paper, Count: 134\n",
+      "Class: clothes, Count: 106\n",
+      "Class: glass, Count: 32\n",
+      "Class: cardboard, Count: 16\n",
+      "Class: plastic, Count: 15\n",
+      "Class: trash, Count: 11\n",
+      "Class: metal, Count: 9\n",
+      "Class: battery, Count: 5\n",
+      "Class: shoes, Count: 6\n",
+      "Class: biological, Count: 2\n",
+      "Predicted class counts for test images containing biological:\n",
+      "Class: cardboard, Count: 11\n",
+      "Class: clothes, Count: 13\n",
+      "Class: biological, Count: 120\n",
+      "Class: glass, Count: 29\n",
+      "Class: shoes, Count: 20\n",
+      "Class: plastic, Count: 3\n",
+      "Class: battery, Count: 1\n",
+      "Class: trash, Count: 1\n",
+      "Class: paper, Count: 1\n",
+      "Class: metal, Count: 1\n",
+      "Predicted class counts for test images containing shoes:\n",
+      "Class: glass, Count: 67\n",
+      "Class: shoes, Count: 174\n",
+      "Class: metal, Count: 9\n",
+      "Class: clothes, Count: 74\n",
+      "Class: cardboard, Count: 7\n",
+      "Class: battery, Count: 20\n",
+      "Class: trash, Count: 10\n",
+      "Class: biological, Count: 25\n",
+      "Class: plastic, Count: 7\n",
       "Class: paper, Count: 3\n"
      ]
     }
